[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FlawlessAPI"
version = "0.1.0"
authors = [
    { name="wen", email="799771344@qq.com" },
]
description = "一个高性能的API服务框架"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
dependencies = [
    "typing; python_version < '3.8'",
]

[project.urls]
"Homepage" = "https://github.com/799771344/FlawlessAPI"
"Bug Tracker" = "https://github.com/799771344/FlawlessAPI/issues"